--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
                 <i class="fa fa-search search-icon" aria-hidden="true"></i>
               </a>
             </li>
-            <li class="nav-item" style="margin-top:5px; padding-right:20px;" >
+            <!--<li class="nav-item" style="margin-top:5px; padding-right:20px;" >
                 <a class="header__checkout snipcart-checkout">
                     <svg width="31" height="27" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path
