change file hyvor_comments uncomment from _includes

--- a/_includes/hyvor_comments.html
+++ b/_includes/hyvor_comments.html
@@ -1,6 +1,6 @@
 <!-- Hyvor Comments. For more info visit https://talk.hyvor.com -->
 
-<!--<div id="hyvor-talk-view"></div>
+<div id="hyvor-talk-view"></div>
 <script type="text/javascript">
     var HYVOR_TALK_WEBSITE = '{{ site.hyvor_talk_website_id }}';
     var HYVOR_TALK_CONFIG = {
