change file hyvor_comments comment from _includes

--- a/_includes/product.html
+++ b/_includes/product.html
@@ -1,4 +1,4 @@
-<div class="blog-post card product">
+<!--<div class="blog-post card product">
     <img src="{{site.url}}{{site.baseurl}}{{ product.image }}" alt="{{ product.name }} product image" class="product__image card-img-top">
     <div class="product__information">
        <!-- <h2 class="product__title">{{ product.name }}</h2> -->
