--- a/_includes/product.html
+++ b/_includes/product.html
@@ -2,8 +2,8 @@
     <img src="{{site.url}}{{site.baseurl}}{{ product.image }}" alt="{{ product.name }} product image" class="product__image card-img-top">
     <div class="product__information">
        <!-- <h2 class="product__title">{{ product.name }}</h2> -->
-       <p class="product__description">{{ product.content | remove: '<p>' | remove: '</p>' }}</p>
+       <!--<p class="product__description">{{ product.content | remove: '<p>' | remove: '</p>' }}</p>
        {% include product_definition.html %}
     </div>
 
-   </div>
+   </div>-->
