--- a/_includes/gallery_breadcrumb.html
+++ b/_includes/gallery_breadcrumb.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12">
+<!--<div class="col-lg-12">
         <nav aria-label="breadcrumb" role="navigation">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item">
