--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,2 @@
-<p> Python, Mathematica, Qiskit,  Git</p>
-<p> Spanish, English, French </p>
+<p> HTML , CSS , Javascript , PHP, Python, C</p>
+<p> Adobe XD, Inkscape, Git, Linux </p>
