--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -24,11 +24,11 @@
   <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
 
   <p class="lead" id="typewriteText"></p>
-  <span>
+<!--  <span>
     {%- include github_star_button.html -%}
     {%- include github_fork_button.html -%}
   </span>
-  <!-- uncomment/modify buttons as you want-->
+  <!-- uncomment/modify buttons as you want--!-_>
   <div class="jumbotron-btns">
     <a href="{{site.url}}{{site.baseurl}}/get-started">
       <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
