--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -24,11 +24,11 @@
   <p class="jumbotron-heading">Hi, I am {{site.author}} !</p>
 
   <p class="lead" id="typewriteText"></p>
-<!--  <span>
+  <!--<span>
     {%- include github_star_button.html -%}
     {%- include github_fork_button.html -%}
-  </span>
-  <!-- uncomment/modify buttons as you want--!-_>
+  </span>-->
+  <!-- uncomment/modify buttons as you want--!_>
   <div class="jumbotron-btns">
     <a href="{{site.url}}{{site.baseurl}}/get-started">
       <button class="btn btn-md btn-warning"> <strong>Get Started</strong> </button>
@@ -36,5 +36,5 @@
     <a id="olvy-target">
       <button class="btn btn-md btn-default"> <strong>What's New</strong> </button>
      </a>
-  </div>
+  </div> -->
 </div>
